# hutch

./: .env.example  .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  sitemap.xml
adapters/: index.html
concepts/: index.html
distribution/: index.html
docs/: adapters.md  concepts.md  distribution.md  index.md  openlineage.md  otel.md  publication.md  schema.md  security.md  steering.md
examples/: README.md
hutch-py/: LICENSE  README.md  pyproject.toml
hutch-py/src/hutch/: __init__.py  __main__.py
hutch-py/src/hutch/_fixtures/: __init__.py  aide.py  dgm.py  openevolve.py
hutch-py/src/hutch/adapters/: __init__.py  aide.py  asi_arch.py  coral.py  cvevolve.py  dgm.py  funsearch.py  openevolve.py  poet.py  ptychi_evolve.py  qdax.py  shinka_evolve.py  support.py  watch.py
hutch-py/src/hutch/cli/: __init__.py
hutch-py/src/hutch/daemon/: __init__.py  app.py  broadcaster.py  server.py
hutch-py/src/hutch/export/: __init__.py  ara.py  prov.py  ro_crate.py
hutch-py/src/hutch/importer/: __init__.py  cache.py  detect.py  generate.py  llm.py  pipeline.py  sandbox.py
hutch-py/src/hutch/openlineage/: __init__.py  emitter.py
hutch-py/src/hutch/otel/: __init__.py  emitter.py
hutch-py/src/hutch/schema/: __init__.py  _docgen.py  events.py  payloads.py  types.py
hutch-py/src/hutch/sdk/: __init__.py  _state.py  api.py  config.py  fallback.py  transport.py
hutch-py/src/hutch/steering/: __init__.py  api.py  store.py
hutch-py/src/hutch/store/: __init__.py  blob.py  database.py  events_io.py
hutch-py/src/hutch/store/migrations/: 0001_initial.py  __init__.py
hutch-py/src/hutch/ui_server/: __init__.py
hutch-py/src/hutch/ui_server/static/: 404.html  index.html  index.txt
hutch-py/src/hutch/ui_server/static/404/: index.html
hutch-py/src/hutch/ui_server/static/_next/static/0MdjZGuHqs8PfGeyyiXpc/: _buildManifest.js
hutch-py/src/hutch/ui_server/static/_next/static/2ckOdnRttQIuBdnlpnWKt/: _buildManifest.js
hutch-py/src/hutch/ui_server/static/_next/static/chunks/: 1b1140af-fa7400d25698301d.js  393-e6460adb2200b16d.js  707-726f1a42922c933d.js  75-56729cad585a2e89.js  84-020f6e43b420cc91.js  842-d0b575437bc661a2.js  86-92ce1dfa30e6a7b2.js  9dcd91aa-e231f08b49faea9b.js  framework-c1c852b11079ddc8.js  main-5637de8d9e6e523b.js  main-app-00b881d929b8350e.js  main-app-144ac18d2765b3ba.js  main-c30900a0d371234b.js  webpack-3317b6648ba897d2.js  webpack-aa61d6de1c4dcafe.js
hutch-py/src/hutch/ui_server/static/_next/static/chunks/app/: layout-74ffa308c9c2b352.js  layout-a9d99322f3c90c39.js  page-3d79ee394d78e2f5.js  page-c56eac1a89cc6db3.js  page-f2935a6f255415de.js
hutch-py/src/hutch/ui_server/static/_next/static/chunks/app/_not-found/: page-3041c8d8c575995d.js  page-aff7a671e4b857fb.js
hutch-py/src/hutch/ui_server/static/_next/static/chunks/app/individual/: page-053808f471dabbde.js  page-9e74c7941bb52464.js
hutch-py/src/hutch/ui_server/static/_next/static/chunks/app/run/: page-21eaaf016d2d426c.js  page-52aceaf6f0a62c23.js  page-8acb60b0b4af0d18.js  page-ea542aaaaec7e2bc.js
hutch-py/src/hutch/ui_server/static/_next/static/chunks/pages/: _app-1306b3645efc12ca.js  _app-366446c3f8566bda.js  _error-137e59aeda94dd78.js  _error-b4aa19d2203c6ecb.js
hutch-py/src/hutch/ui_server/static/_next/static/css/: 1ba310c23392ea48.css  4cc5cb8f91be9958.css  e9a4a6509bfa971b.css
hutch-py/src/hutch/ui_server/static/individual/: index.html  index.txt
hutch-py/src/hutch/ui_server/static/run/: index.html  index.txt
hutch-py/tests/: _asi_arch_fixture.py  _coral_fixture.py  _cvevolve_fixture.py  _foreign_format_fixture.py  _funsearch_fixture.py  _poet_fixture.py  _ptychi_evolve_fixture.py  _qdax_fixture.py  _shinka_evolve_fixture.py  conftest.py  test_adapter_aide.py  test_adapter_asi_arch.py  test_adapter_coral.py  test_adapter_cvevolve.py  test_adapter_dgm.py  test_adapter_funsearch.py  test_adapter_openevolve.py  test_adapter_poet.py  test_adapter_ptychi_evolve.py  test_adapter_qdax.py  test_adapter_shinka_evolve.py  test_adapter_watch.py  test_blob_store.py  test_cli.py  test_daemon.py  test_database.py  test_docgen.py  test_export.py  test_importer_offline.py  test_integration.py  test_llm_importer.py  test_openlineage.py  test_otel.py  test_round_trip.py  test_schema_invariants.py  test_schema_payloads.py  test_schema_types.py  test_score_directions.py  test_sdk_config.py  test_sdk_daemon.py  (+6 more)
hutch-skill/: README.md  SKILL.md
hutch-ui/: .gitignore  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
openlineage/: index.html
otel/: index.html
publication/: index.html
schema/: index.html
scripts/: regen-screenshots.py
(+69 files in other folders)
